# voice-ai-agent

./: .env.example  .gitignore  CLAUDE.md  FUTURE_ENHANCEMENTS.md  Makefile  README.md  TTS_TESTING_README.md  TTS_TEST_RESULTS.md  pyproject.toml  test_tts_docker.py  tts_test_report.json  voice-ai-agent.code-workspace
.github/workflows/: deploy-hetzner.yml
ai/conversation/: __init__.py  dialog_flow.py  state_manager.py
ai/decision_engine/: __init__.py  intent_classifier.py
ai/llm/: llm_service.py  ollama_client.py  prompt_templates.py
ai/rag/: chunking_strategies.py  document_processor.py  embedding_service.py  rag_service.py  vector_store.py
ai/utils/: performance.py
ai/voice/: __init__.py  audio_processor.py  stt_service.py  tts_service.py
backend/: Dockerfile  Dockerfile.prod  Dockerfile.prod.hetzner  diagnose_tts.py  requirements-dev.txt  requirements-minimal.txt  requirements.txt  simple_tts.py  test_tts_standalone.py
backend/app/: main.py
claude-docs/: README.md  ROADMAP.md
docker/: .env.example  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init.sql
docker/nginx/: nginx.prod.conf
docs/: README.md  llm-setup.md  setup.md
notebooks/: README.md  model_ratings.json  requirements.txt  tts_playground.ipynb  xtts_v2_playground.ipynb
scripts/: SALES_CALL_GUIDE.md  generate_sales_call.py  merge_sales_call.py  setup.sh  start-dev.sh  test.sh  test_voice.sh
telephony/: sip_gateway.py
tests/: conftest.py  test_api_endpoints.py  test_campaign_integration.py  test_chunking_strategies.py  test_config.py  test_conversation.py  test_crm_integration.py  test_document_processor.py  test_health.py  test_integration.py  test_phase3_config.py  test_telephony_integration.py  test_voice_stt.py  test_voice_tts.py  test_voice_websocket.py
(+49 files in other folders)
